--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
           <ion-button (click)="calcularDividir()">DIVIDIR</ion-button>
         </ion-item>
         <ion-item>
-          <ion-label>RESULTADO:</ion-label>
+          <ion-label id="labelResultado">RESULTADO:</ion-label>
           {{resultado}}
         </ion-item>
         <ion-item>
